# pdomain-prep-for-pgdp

./: .dockerignore  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CLAUDE.md  CONVENTIONS.md  DEVELOPMENT.md  Dockerfile  Makefile  README.md  install.ps1  install.sh  mise.toml  openapi.json  process-book-belloc-the-four-men.ipynb  pyproject.toml
.basedpyright/: baseline.json
docs/: 01-overview.md  02-backend.md  03-pipeline.md  04-frontend.md  05-events-and-jobs.md  06-deployment.md  07-testing.md  08-roadmap-shipped.md  08-roadmap.md  README.md  architecture-decisions.md
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
scripts/: detect_dev_local.py  local-check.sh
specs/: 00-overview.md  01-book-config.md  02-pipeline-steps.md  03-ui-layout.md  04-gpu-acceleration.md  05-illustrations.md  06-page-workbench.md  07-api-design.md  08-data-models.md  09-deployment.md  REFACTOR-PROPOSAL.md
tests/: conftest.py  test_assign_prefixes.py  test_auth_me.py  test_auto_detect.py  test_batch_jobs.py  test_batch_pages_handler.py  test_blank_proof.py  test_bootstrap_builders.py  test_bootstrap_frontend_dev_mode.py  test_cdn_upload.py  test_concurrent_jobs.py  test_config_resolver.py  test_cover_title_packaging.py  test_cpu_backend_batch.py  test_crop_for_ocr.py  test_delete_page_words.py  test_delete_project.py  test_dependencies.py  test_detect_dev_local.py  test_dispatcher_immediate.py  test_dispatcher_integration.py  test_e2e_ingest.py  test_e2e_pipeline.py  test_entry_point.py  test_env_js.py  test_error_handler.py  test_filesystem_storage.py  test_illustration_helpers.py  test_illustrations.py  test_illustrations_auto_detect.py  test_ingest.py  test_ingest_auto_detect.py  test_ingest_layout_detect.py  test_ingest_progress.py  test_ingest_progress_cb_resilience.py  test_ingest_zip_dupe_basenames.py  (+44 more)
(+173 files in other folders)
